tests/ui/lifetimes/conflicting-bounds.stderr
error[E0283]: type annotations needed: cannot satisfy `G: Gen<'source>`
  --> $DIR/conflicting-bounds.rs:14:6
   |
LL |     <G as Gen<'source>>::gen(g)
   |      ^
   |
note: multiple `impl`s or `where` clauses satisfying `G: Gen<'source>` found
  --> $DIR/conflicting-bounds.rs:11:8
   |
LL |     G: Gen<'source>,
   |        ^^^^^^^^^^^^
LL |     for<'s> G: Gen<'s, Output = T>,
   |                ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
